# Denki

./: .gitignore  README.md  STYLE.md  Taskfile.yaml  docker-compose.yml
.github/workflows/: ci.yml
configuration/: .prettierrc
database/: Taskfile.yaml  package-lock.json  package.json
deployment/: README.md
services/ingestor/: Dockerfile  README.md  Taskfile.yaml  pyproject.toml
services/ingestor/configuration/: .env.example
services/ingestor/configuration/task/: lifecycle.yaml  quality.yaml  run.yaml  test.yaml
services/ingestor/setup/: pyproject.toml
services/ingestor/source/: __init__.py  app.py  main.py
services/ingestor/source/cli/: __init__.py  commands.py  parser.py
services/ingestor/source/config/: __init__.py  settings.py
services/ingestor/source/controllers/: __init__.py  annotate.py  documents.py  parse.py
services/ingestor/source/endpoints/: __init__.py  annotate.py  documents.py  health.py  parse.py
services/ingestor/source/integrations/: __init__.py  tesseract.py
services/ingestor/source/models/: __init__.py  blocks.py  documents.py  geometry.py  html.py  ocr.py  text.py
services/ingestor/source/ocr/: __init__.py  paddle.py
services/ingestor/source/services/: __init__.py  annotate.py  document_engine.py  documents.py  parse.py
services/ingestor/test/: architecture_test.py  health_test.py  models_test.py  parse_test.py
services/ingestor/test/integration/: parse_e2e_test.py
services/ingestor/test/unit/: annotate_test.py  architecture_test.py  cli_test.py  ocr_test.py  parse_test.py  services_test.py
(+91 files in other folders)
